--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,7 +4,31 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
 
+    check-diff:
+
+        runs-on: ubuntu-latest
+
+        outputs: 
+          
+            changed: ${{ steps.diff.outputs.changed }}
+
+        steps:
+
+            - uses: actions/checkout@v5
+
+            - id: diff
+              run: |
+                if git diff --quiet HEAD^ HEAD; then
+                  echo "changed=false" >> $GITHUB_OUTPUT
+                else
+                  echo "changed=true" >> $GITHUB_OUTPUT
+                fi
+
     ford:
+
+        needs: check-diff
+
+        if: needs.check-diff.outputs.changed == 'true'
 
         runs-on: ubuntu-latest
 
