--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -102,7 +102,7 @@ jobs:
                 if-no-files-found: error
 
             - name: Deploy documentation
-              uses: JamesIves/github-pages-deploy-action@4.1.0
+              uses: JamesIves/github-pages-deploy-action@v4
               if: ${{ github.event_name == 'push'  &&  github.ref == 'refs/heads/main' }}
               with:
                 branch: github-pages
